Last second fixes -Fix Font Families -Fix view Menu -Fix responsiveness for      About      Cater      Juice Programs -Fix Map responsiveness -Fix margins on order page      fixed margins      Not responsive -Fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -322,6 +322,13 @@ a:visited {
 .flex__price {
   text-align: right; }
 
+.content-container--confirm {
+  min-height: 80vh;
+  width: 100%; }
+
+.flex__create {
+  margin-left: -30em; }
+
 .footer {
   background-image: url("../../img/textures/wood2.png");
   box-shadow: -1px -4px 15px #323232;
