--- a/public/sass/modules/_content.sass
+++ b/public/sass/modules/_content.sass
@@ -189,4 +189,9 @@ $backgroundLeft: #71D161
 .flex__price
   text-align: right
 
-//////////////////////// MEDIA QUERIES //////////////////////////
+//////////////////////// ORDERS //////////////////////////
+.content-container--confirm
+  min-height: 80vh
+  width: 100%
+.flex__create
+  margin-left: -30em
